# shot-type-prediction

./: .gitignore  README.md  predict.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/shot_type_prediction/: __init__.py  __main__.py  cli.py  predict.py
tests/: test_cli.py  test_predict.py
